--- a/_locales/zh/Emakefun Matrix Keyboard V3-strings.json
+++ b/_locales/zh/Emakefun Matrix Keyboard V3-strings.json
@@ -4,5 +4,5 @@
   "Emakefun.createMatrixKeyboard|block": "创建矩阵键盘模块|I2C地址 = $i2c_address",
   "Emakefun|block": "Emakefun",
   "{id:category}Emakefun": "Emakefun",
-  "{id:subcategory}MatrixKeyboard": "MatrixKeyboard"
+  "{id:subcategory}MatrixKeyboard": "矩阵键盘"
 }
